- Fixed bug of wrong solutions - Correct solutions should now get identified as such - Added 2 small methods that could be used for debugging

BUG:217926

svn path=/trunk/KDE/kdegames/ksudoku/; revision=1080811