engine/solver.cpp
@@ -167,7 +167,7 @@ void Solver::logicalSolve(Problem& problem) {
 		if(m_state == Failure) {
 			return;
 		}
-		if(storage->isFinished(&problem)) {
+		if(helperStorage->activeHelpers(&problem) == 0 && storage->isFinished(&problem)) {
 			// TODO specify that this problem is a minimalistic problem
 			m_results << problem;
 			m_state = Success;
